[tool.poetry]
name = "kurs-6-dz-19-1"
version = "0.1.0"
description = ""
authors = ["Леонид Петров <leonidpetrov637@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs_6_dz_19"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
